# kkscope

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: modules.dia
husky/: CMakeLists.txt  README  bookmarksdlg.cpp  bookmarksdlg.h  calltreedlg.cpp  calltreemanager.h  configfrontend.cpp  configfrontend.h  cscopefrontend.cpp  cscopefrontend.h  cscopemsgdlg.cpp  ctagsfrontend.cpp  ctagsfrontend.h  ctagslist.cpp  ctagslist.h  dirscanner.cpp  dirscanner.h  dotfrontend.cpp  dotfrontend.h  editormanager.cpp  editormanager.h  editorpage.cpp  editorpage.h  editortabs.cpp  editortabs.h  filelist.cpp  filelist.h  fileview.cpp  fileview.h  frontend.cpp  frontend.h  graphedge.cpp  graphedge.h  graphnode.cpp  graphnode.h  graphprefdlg.cpp  graphprefdlg.h  graphwidget.cpp  graphwidget.h  historypage.cpp  (+55 more)
husky/doc/: Qt3to4  classes.dia  log  modules.dia  readme
husky/src/: CMakeLists.txt  calltreedlg.cpp  calltreemanager.cpp  configfrontend.cpp  ctagsfrontend.cpp  ctagsfrontend.h  ctagslist.cpp  ctagslist.h  ctagslistwidget.cpp  ctagslistwidget.h  dirscanner.h  dotfrontend.cpp  editormanager.cpp  editorpage.cpp  editorpage.h  editortabs.cpp  editortabs.h  encoder.cpp  encoder.h  filelist.cpp  filelist.h  filelistwidget.cpp  fileview.cpp  frontend.cpp  graphnode.cpp  graphprefdlg.cpp  graphwidget.cpp  historypage.cpp  historyview.cpp  husky.h  kscope.cpp  kscope.h  kscopeactions.cpp  kscopeconfig.cpp  kscopepixmaps.cpp  kscopepixmaps.h  makefrontend.cpp  newprojectdlg.cpp  newprojectdlg.h  openprojectdlg.cpp  (+29 more)
husky/src/ui/: bookmarkslayout.ui  kscopeui.rc  makelayout.ui  preffontlayout.ui
husky/test/bookmarksdlg/: CMakeLists.txt  mainwin.h
husky/test/calltreedlg/: CMakeLists.txt
husky/test/cscopemsg/: CMakeLists.txt
husky/test/ctagslist/: CMakeLists.txt  mainwin.cpp
husky/test/editormanager/: CMakeLists.txt  mainwin.h
husky/test/editorpage/: CMakeLists.txt
husky/test/editortab/: CMakeLists.txt
husky/test/filelist/: CMakeLists.txt  mainwin.cpp  mainwin.h
husky/test/fileview/: CMakeLists.txt  mainwin.cpp
husky/test/makedlg/: CMakeLists.txt  mainwin.cpp
husky/test/newprojectdlg/: CMakeLists.txt  mainwin.cpp
husky/test/openprojectdlg/: CMakeLists.txt  mainwin.h
husky/test/preferencedlg/: CMakeLists.txt  mainwin.cpp  mainwin.h
husky/test/projectfilesdlg/: CMakeLists.txt  mainwin.cpp
husky/test/querywidget/: CMakeLists.txt  mainwin.cpp  mainwin.h
husky/test/searchlist/: CMakeLists.txt  main.cpp  mainwin.cpp  mainwin.h  search.cpp  search.h
husky/ui/: bookmarkslayout.ui  calltreelayout.ui  convert.sh  fileviewlayout.ui  makelayout.ui  openprojectlayout.ui  prefcolorlayout.ui  projectfileslayout.ui  queryviewlayout.ui  querywidgetlayout.ui  searchresultslayout.ui
husky/yacc/: dotparse.ypp
script/: kscope_config
src/: CMakeLists.txt  bookmarksdlg.cpp  calltreedlg.cpp  calltreedlg.h  calltreemanager.cpp  configfrontend.cpp  configfrontend.h  cscopefrontend.cpp  cscopemsgdlg.cpp  cscopemsgdlg.h  ctagslistwidget.cpp  ctagslistwidget.h  editorpage.h  editortabs.h  filelistwidget.cpp  filelistwidget.h  fileview.h  frontend.cpp  graphnode.h  graphwidget.h  historypage.cpp  historypage.h  kscope.cpp  kscope.h  kscopeactions.cpp  kscopeactions.h  kscopeconfig.cpp  kscopeconfig.h  kscopepixmaps.cpp  makedlg.cpp  makedlg.h  makefrontend.h  prefcolor.cpp  prefcolor.h  preferencesdlg.cpp  preferencesdlg.h  preffont.cpp  preffrontend.cpp  prefopt.cpp  prefopt.h  (+23 more)
src/ui/: calltreelayout.ui  cscopemsglayout.ui  fileviewlayout.ui  kscopeui.rc  newprojectlayout.ui  preffrontendlayout.ui  prefoptlayout.ui  symbollayout.ui
src/yacc/: dotscan.lpp
test/bookmarksdlg/: mainwin.cpp
test/calltreedlg/: mainwin.h
test/cscopemsg/: mainwin.h
test/ctagslist/: CMakeLists.txt  mainwin.cpp  mainwin.h
test/editormanager/: mainwin.cpp
test/filelist/: CMakeLists.txt  mainwin.cpp  mainwin.h
test/fileview/: mainwin.h
test/makedlg/: mainwin.h
test/newprojectdlg/: mainwin.h
test/openprojectdlg/: main.cpp  mainwin.cpp
test/preferencedlg/: CMakeLists.txt  mainwin.h
test/projectfilesdlg/: mainwin.h
test/querywidget/: CMakeLists.txt  mainwin.h
